--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 90vh;
-    background-color: rgb(253, 30, 0);
+    background-color: #ffb3c6; 
 }
 
 #noButton {
@@ -37,8 +37,10 @@ body {
 }
 
 .btn {
-    background-color: #ffffff;
-    color: rgb(233, 48, 48);
+    outline-style: dotted;
+    outline-color: rgb(121, 118, 118);
+    background-color:#ffe5ec ;
+    color: #de2020;
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
@@ -47,7 +49,12 @@ body {
     cursor: pointer;
     border: none;
     border-radius: 12px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+/* scale up when 'big' class is present */
+.btn.big {
+    transform: scale(1.25);
 }
 
 .gif_container {
